--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,6 @@
 {% block content %}
     <div class="featrues">
         <h1>{{ title }}</h1>
-        <p>Текст</p>
-        <button class="btn btn-warning">Кнопка</button>
+        <p>Страница соодержит основную информацию о проекте</p>
     </div>
 {% endblock %}
