--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -15,9 +15,7 @@
         <h3>Навигация</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fa-solid fa-user"></i> Главная</li></a>
-            <a href="{% url 'about'%}"><li><i class="fa-solid fa-address-card"></i> О нас</li></a>
-            <a href="{% url 'bd_home'%}"><li><i class="fa-solid fa-address-card"></i> База данных</li></a>
-            <a href=""><li><i class="fa-solid fa-address-book"></i> Контакты</li></a>
+            <a href="{% url 'bd_home'%}"><li><i class="fa-solid fa-address-card"></i> Отчеты</li></a>
         </ul>
     </aside>
     <main>
